apps/canfar/base/storage-ui/custom-storage-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-ui-ingress
  namespace: skaha-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: canfar.ral.uksrc.org
    http:
      paths:
      - path: /storage
        pathType: Prefix
        backend:
          service:
            name: storage-ui-tomcat-svc
            port:
              number: 8080
